--- a/Ancient_spells.html
+++ b/Ancient_spells.html
@@ -77,6 +77,28 @@
 
 
 
+
+    <a></a>
+    [THE CODE OF THE EXTRAORDINARY MIND 134p] When Richard Branson restored fun to a special dinner, he was demonstrating that happiness is under our control. When things get out of balance, you can bring yourself back to bliss.<br>
+    Science is showing us that one of the key things that lets us function optimally in the world is our ability to control our happiness level. It's a requirement for learning to bend reality. While it's a trainable skill, many of us still find it elusive.
+    <br><br>
+
+    <a></a>
+    [THE CODE OF THE EXTRAORDINARY MIND 133p] It turns out that our brains are literally hardwired to perform at their best not when they are negative or even neutral, but when they are positive. Yet in today's world, we ironically sacrifice happiness for success onl to lower our brain's success rates. - SHAWN ACHOR, THE HAPPINESS ADVANTAGE
+    <br><br>
+
+    <a></a>
+    [THE CODE OF THE EXTRAORDINARY MIND 130p] Law 6: Bend reality<br>
+    Extraordinary minds are able to bend reality. They have bold and exciting visions for the future, yet their happiness is not tied to these visions. They are happy in the now. This balance allows them to move toward their visions at a much faster rate while having a ton of fun along the way. To outsiders, they seem "lucky."
+    <br><br>
+
+    <a></a>
+    [THE CODE OF THE EXTRAORDINARY MIND 129p] I've observed that almost all of the extraordinary people I've met or read about have one thing in common: They have a vision for their future. It may be a new piece of art to create, a service or product to bring to the world, a mountain to climb, or a family to raise.<br>
+    These people live in the future in some way. Conventional spiritual growth advocates talk about the need to be "present." I believe that being present is only part of the story. Happiness in the now grounds you in the present. But you need bold dreams pulling you forward, too. Extraordinary people intend to leave a mark on the world.<br>
+    Now, a word of warning. You need to make sure that your goals aren't Brule-based, or you might end up chasing something that feels meaningless once you acquire it or as happens to countless entrepreneurs when they build a business with the goal of earning a living, only to feel trapped in the usual nine-to-five when they achieve their goal.<br>
+    Instead, you want a vision for the future that speaks to your soul. This vision is typically what we call an end goal.
+    <br><br>
+
     <a></a>
     [THE CODE OF THE EXTRAORDINARY MIND 129p] Your happiness will accelerate your movement toward your goals, but it should not be tied to them. The best thing you can do to meet your goals is to find a life balance that allows you to be happy now. Integrate practices into your daily routines that allow you to feel content and focus on the journey, not the destination. That's how you'll break free of stress and anxiety and be in the best position to fulfill your vision. We'll explore such practices in the next chapter.
     <br><br>
