--- a/Ancient_spells.html
+++ b/Ancient_spells.html
@@ -46,7 +46,7 @@
   <div id="contents">
     <img src="blizzardstorm.gif" width="100%">
 
-    <h1>Ancient Spells[Lv.55]</h1><br><br><br>
+    <h1>Ancient Spells[Lv.58]</h1><br><br><br>
 
     <h3 style="text-align:center">Spells Mastered</h3><br>
 
@@ -77,6 +77,159 @@
 
 
 
+
+
+
+    <a></a>
+    [THE CODE OF THE EXTRAORDINARY MIND 190p] When you become unfuckwithable, it makes all the smaller problems meaningless. You're no longer bothered about that date who didn't text you back, the rising price of gas, or that naysaying coworker. You have more urgent things to worry about.<br>
+    You don't get bogged down by petty problems and by other people's misbehaviors, grudges, and rivalries. You have no time for politicking, finger-pointing, pot-stirring, backstabbing, bullying, tattling, throwing under the bus, and other time sucks that fill the days of bored and unhappy people.<br>
+    When you're unfuckwithable, you rise above all of that. Instead, you're thinking of far bigger things――of problems to solve that could change the world and help others move forward. Your goal becomes to tackle these problems.
+    <br><br>
+
+    <a></a>
+    [THE CODE OF THE EXTRAORDINARY MIND 189-190p] I found that to be a beautiful paradox: Knowing we are ENOUGH gives us the courage to do MORE, do BETTER, do our BEST. When we learn to be unfuckwithable, the biggest fears that hold so many back no longer bother us. We boldly pursue big dreams and goals.<br>
+    But we'd happy even if we lost all our goals and possessions because our end goals are self-fueled goals――feelings that we desire to have, such as being surrounded by love, enjoying beautiful human experiences, or learning and growing.<br>
+    When you learn how to fill the holes within, and you no longer need outside validation to know you are enough and when you set end goals that come from your deepest feelings about living a meaningful life, you have graduated to the next level in recoding yourself and moving forward on your path toward the extraordinary. You're now armed with the fortitude you need to take on truly massive goals――goals that change the culturescape itself and create a dent in the universe.
+    <br><br>
+
+    <a></a>
+    [THE CODE OF THE EXTRAORDINARY MIND 189p] In a nutshell, his question was this: If it is true that "I am enough" and if we don'tt need to get validation or praise from others, what is the driving force that pushes us do big things in the world? What would prevent us from just being happy couch potatoes, doing nothing but enjoying the present?<br>
+    Marisa replied:<br>
+    If you sit on the couch all day and do nothing, it is precisely because you don't think you're enough. You're afraid. You're afraid of failure. You're afraid of rejection. You're afraid that those things will be proof positive that you indeed are not enough. So you do nothing.<br>
+    Marisa cnotinued:<br>
+    But if you believe that you're enough, that's when you take action. That's when you go out and try something new. That's when you apply for that job you really want. That's when you ask for that raise. Because you're enough. And even if you fail, you won't take rejection personally because it's not you――you ARE enough――so it must be your methods or your approach or skill or whatever――and because you know you're enough, you know you can then improve those methods and skills and your approaches and then try again.
+    <br><br>
+
+    <a></a>
+    [THE CODE OF THE EXTRAORDINARY MIND 188p] The next time you feel an apparent urge to lose your cool, or you feel judged, insulted, or hurt by a loved one, remember to be present. This quick mental hack to autocorrect your mental state can instantly pull you out of stress and anxiety and return you to happiness in the now. Sonia suggests that the way to do this is to draw your mind to any color, texture, or object you see in front of you. And then go deep with your observation. you might observe the color of the table and the patterns of the wood before you. Or the odors you smell and sounds you hear. For some reason, this act causes a sudden drop in anxiety and other negative feelings. To amplify the effect, focus on your breathing, too.
+    <br><br>
+
+    <a></a>
+    [THE CODE OF THE EXTRAORDINARY MIND 185p] In order to be unfuckwithable, we need to be immune to such words and actions――to praise as well as to cirticism. Every time you give someone the power to build you up with praise, you're also unknowingly giving that person the power to destroy ou with criticism. Therefore, accept praise and criticism as nothing more than someone else's expressions of their models of reality. They have nothing to do with who you really are.<br>
+    You were born enough. And we should be able to feel secure and complete in our own skin without others having to support us.
+    <br><br>
+
+    <a></a>
+    [THE CODE OF THE EXTRAORDINARY MIND 184p] You know you have a hole to plug when you find yourself feeling hurt or creating meaning around someone else's action or words.<br>
+    You can't control someone else's behavior towward you, but you can control your own reaction and how your meaning-making machine construes that behavior. The key is to override our inner desire to prove ourseles or our tendency to feel as if we're not enough without the love or validation of others.
+    <br><br>
+
+    <a></a>
+    [THE CODE OF THE EXTRAORDINARY MIND 183-184p] When you create meaning around others' actions or judge others who don't provide what you need, chances are you're really just compensating for hole within yourself that they reminded you of. In every case, the root cause of this is a feeling of not being enough. So we look to others for validation, love, or praise and get hurt when we observe what we believe is criticism, judgment, or rudeness.<br>
+    But remember, you're in control of filling the hole within.<br>
+    And here's the paradox. When you plug this hole within yourself and stop demanding that others fill it for you, you actually imiprove the chances of having the kind of great relationships you long for.<br>
+    There is nothing more attractive than a person who loves himself or herself so deeply that their positive energy and love spill over to others and to the world.
+    <br><br>
+
+    <a></a>
+    [THE CODE OF THE EXTRAORDINARY MIND 183p] In all these situations, chances are you won't literally think, "I'm not enough." No, the sneaky thing about his model is that if you have it, it's hard to admit you have it――or even to realize that it's there. So instead, you bury it and create a model of reality about the person you're seeking validation from. Your brain's meaning-making machine goes into overdrive and you decide:<br>
+    * My husband's so inconsiderate.<br>
+    * That son of mine really doesn't appreciate me.<br>
+    * My sister doesn't care about her family――how awful of her.<br>
+    * My boss is an unappreciative jerk.<br>
+    This is the most disempowering kind of model to have, because you're blaming outside circumstances for what happens in your life. This model robs you of your own ability to control our life. While you can't control what others do, you can control how you react to others. In order to be truly unfuckwithable, you need to lose your need to seek validation or love from others and to judge them when you perceive that they are not giving you what you need.
+    <br><br>
+
+    <a></a>
+    [THE CODE OF THE EXTRAORDINARY MIND 182-183p] Because the model of reality that we are not enough is terribly painful, we live our lives trying to prove that we're enough. Sometimes this can be an asset; for example, my drive to prove I was enough led me to a certain degree of entrepreneurial success.<br>
+    But it's not the optimal path, because working to disprove the model of not being enough has a hidden cost. That cost is that you will depend on others for validation.
+    <br><br>
+
+    <a></a>
+    [THE CODE OF THE EXTRAORDINARY MIND 182p] Have goals. But your happiness should not be attached to the completion of your goals. The feeling you get from completing those goals ou can learn to generate now. When you realize this, the fear of loss disappears. You can explore every facet of your dreams. Be bold. Act fearlessly. And be happy――now.
+    <br><br>
+
+    <a></a>
+    [THE CODE OF THE EXTRAORDINARY MIND 182p] My happiness in the now fuels my vision for the future, and that vision fuels my happiness, because a key part of it (love, learning, and human experiences)is already happening. It all connects.
+    <br><br>
+
+    <a></a>
+    [THE CODE OF THE EXTRAORDINARY MIND 181-182p] When you become unfuckwithable, it doesn't mean you're settling for small goals. Instead, it means you've stopped setting goals for things you think you need to get from other people.
+    <br><br>
+
+    <a></a>
+    [THE CODE OF THE EXTRAORDINARY MIND 181p] Replacing fear with courage is one of the key components of being unfuckwithable. Most people live their lives consistently bothered and worried about not being loved enough about not succeeding fast enough, not being significant, not being impressive, losing the things that make us happy. But when you let go of the Brules that lead you to the wrong priorities, look beyond your means goals and create self-fueled end goals, you've effectively bother-proofed yourself. You stop worrying about what others will think of you or might take from you, and you free yourself to dream big and be creative in other areas of your life.
+    <br><br>
+
+    <a></a>
+    [THE CODE OF THE EXTRAORDINARY MIND 181p] Too many people stay stunted in their growth because of fear of loss――but when you go deep enough with this exercise, you realize that there is no loss. Happiness is completely within your control, and when you have nothing to lose, you're free to think and dream boldly.
+    <br><br>
+
+    <a></a>
+    [THE CODE OF THE EXTRAORDINARY MIND 181p] When you identify self-fueled end goals that put them within your power――you will have nothing to lose.
+    <br><br>
+
+    <a></a>
+    [THE CODE OF THE EXTRAORDINARY MIND 179p] We should not be attached to receiving love from someone else.
+    <br><br>
+
+    <a></a>
+    [THE CODE OF THE EXTRAORDINARY MIND 179p] A good end goal is something you have absolute control over. No object or person can take it away from you.
+    <br><br>
+
+    <a></a>
+    [THE CODE OF THE EXTRAORDINARY MIND 151p] Law 8: Be unfuckwithable.<br>
+    Extraordinary minds do not need to seek validation from outside opinion or through the attainment of goals. Instead, they are truly at peach wiht themselves and the world around them. They live fearlessly――immune to criticism or praise and fueled by their own inner happiness and self-love.
+    <br><br>
+
+    <a></a>
+    [THE CODE OF THE EXTRAORDINARY MIND 172p] You can't connect the dots looking forward; you can only connect them looking backward. So you have to trust that the dots will somehow connect in your future. You have to trust in something――your gut, destiny, life, karma, whatever. Because believing that the dots will connect down the road will give you the confidence to follow your heart even when it leads you off the well-worn path; and that will make all the difference. - Steve Jobs
+    <br><br>
+
+    <a></a>
+    [THE CODE OF THE EXTRAORDINARY MIND 167p] Law 8: Create a vision for your future.<br>
+    Extraordinary minds create a vision for their future  that is decidedly their own and free from expectations of the culturescape. Their vision is focused on end goals that strike a direct chord with their happiness.
+    <br><br>
+
+    <a></a>
+    [THE CODE OF THE EXTRAORDINARY MIND 162p] I've found that all end goals fall into three different buckets.<br>
+    The first is experiences. No matter what you believe about humanity's origins, one thing is clear. We're here to experience all the world has to offer――not objects, not money, but experiences. Money and objects only generate experiences. Experiences also give us happiness in the now, a key component of the extraordinary live. We need to feel that daily life holds wonder and excitement to sustain our happiness――which fuels our movement toward our goals.<br>
+    The second is growth. Growth deepens our wisdom and awareness. It may be growth we choose or growth that chooses us. Growth makes life an endless journey of discovery.<br>
+    The third is contribution. It is what we give back from the wealth of our experiences and growth. What we give is the special mark we can make on the world. Giving moves us toward awakening, the highest level of happiness, by providing meaning in our lives, and it is a key component of the extraordinary life.
+    <br><br>
+
+    <a></a>
+    [THE CODE OF THE EXTRAORDINARY MIND 161p] HOW TO IDENTIFY END GOALS<br>
+    1. END GOALS ARE ABOUT FOLLOWING YOUR HEART.<br>
+    Time flies when you're pursuing them. You may work hard toward these goals, but you feel it's worth it. They remind you of how fantastic it is to be human. When you're working on an end goal, it doesn't feel like "work." You could be doing it for hours on end, but it genuinly makes you happy or gives you meaning. You don't need to step away to get "recharged." Working on the end goal itself recharges you――it doesn't drain you. For example, for me, writing this book is an end goal. It's so much fun that I'd do it even if I never got paid.<br>
+    2. END GOALS ARE OFTEN FEELINGS.<br>
+    To be happy, to be in love, to consistently feel loving, to consistently feel joyous are all very good end goals. A diploma, as award, a big business deal, or other achievements can certainly bring good feelings, but they are not end goals UNLESS you're happy AS you're pursuing them――in other words, unless the act of studying for your diploma or closing the business deal itself brings you happiness. End goals have happiness baked into the pursuit.
+    <br><br>
+
+    <a></a>
+    [THE CODE OF THE EXTRAORDINARY MIND 156p] I love this advice from author Joe Vitale: "A good goal should scare you a little and excite you a lot." Scary and exciting are two beautiful feelings that good end goals often bring out. Scary is a good thing because it means you're pushing your boundaries――that's how you take steps toward the extraordinary. Excitement signifies that your goal is genuinely close to your heart――not something you're doing to please someone else or to conform to society's Brules.
+    <br><br>
+
+    <a></a>
+    [THE CODE OF THE EXTRAORDINARY MIND 155p] The difference between a means goal and an end goal is one of the lessons that I wish more people could learn earlier in life. End goals are the beautiful, exciting rewards of being human on planet Earth. End goals are about experiencing love, traveling around the world being truly happy, contributing to the planet because doing so gives you meaning, and learning a new skill for the pure joy of it.<br>
+    End goals speak to your soul. They bring you joy in and of themselves, not because they confer any outward label, standard, or value attached by society. Nor are end goals undertaken for the purpose of pay or for material reward. They are the experiences that create the best memories in our lives.
+    <br><br>
+
+    <a></a>
+    [THE CODE OF THE EXTRAORDINARY MIND 151p] Law 7: Live in Blissipline.<br>
+    Extraordinary minds understand that happiness comes from within. They begin with happiness in the now and use it as a fuel to drive all their other visions and intentions for themselves and the world.
+    <br><br>
+
+    <a></a>
+    [THE CODE OF THE EXTRAORDINARY MIND 151p] Kristina asked, "How is it possible to be happy when seeing so much misery and tragedy every day?"<br>
+    The Dalai Lama's answer was actually a question, and it was simply this: "But who can you help if you're unhappy?"
+    <br><br>
+
+    <a></a>
+    [THE CODE OF THE EXTRAORDINARY MIND 148p] I believe that the only currency that truly matters in an unceretain world is the kindness and generosity passed fro one human being to another.
+    <br><br>
+
+    <a></a>
+    [THE CODE OF THE EXTRAORDINARY MIND 147p] Unfuckwithable: When you're truly at peace and in touch with yourself. Nothing anyone says or does bothers you and no negativity can touch you.
+    <br><br>
+
+    <a></a>
+    [THE CODE OF THE EXTRAORDINARY MIND 147p] Remember that hurt people, hurt people. Those who hurt others are doing it because at some level, at some time, they were hurt, too.
+    <br><br>
+
+    <a></a>
+    [THE CODE OF THE EXTRAORDINARY MIND 147p] As I was doing this process, I remembered a quote from one of my favorite authors, Neale Donald Walsch: "[The universe] sent you nothing but angels." It implies adopting a model of reality that everyone who has ever entered our lives, even those who have hurt us, are nothing more than messengers to teach us an important lesson.
+    <br><br>
 
     <a></a>
     [THE CODE OF THE EXTRAORDINARY MIND 134p] When Richard Branson restored fun to a special dinner, he was demonstrating that happiness is under our control. When things get out of balance, you can bring yourself back to bliss.<br>
