--- a/The_war_of_genesis_III.html
+++ b/The_war_of_genesis_III.html
@@ -57,7 +57,7 @@
 
 
 
-  <h1>The War of Genesis III[Lv.64]</h1><br><br><br>
+  <h1>The War of Genesis III[Lv.65]</h1><br><br><br>
 
   <h3 style="text-align:center">Characters Obtained</h3><br>
 
@@ -81,6 +81,8 @@
 
 
 
+  <a></a><a></a><a></a><a></a><a></a>
+  YOURTURNS ACTIVATION(050121): 1(+5EXP)<br><br>
 
   <a></a><a></a>
   PKROMEDA ACTIVATION(042521): 1(+2EXP)<br>
