--- a/Ancient_spells.html
+++ b/Ancient_spells.html
@@ -81,6 +81,47 @@
 
 
     <a></a>
+    [새는 날아가면서 뒤돌아보지 않는다 46p] 마음이 담긴 길을 걸으려면 편견의 반대편에 설 수 있어야 한다. 모두에게 사랑받고 모든 사람이 당신의 여행을 이해하리라 기대하지 말아야 한다. 당신의 길이지 그 사람들의 길이 아니기 때문이다. 남의 답이 아니라 자신의 답을 찾는 것이 호모 비아토르이다.<br>
+    마음이 담긴 길을 걷는 사람은 행복을 추구하는 것이 아니라 행복과 나란히 걷는다. 행복은 목적지가 아니라 여정에서 발견되는 것이기 때문이다. 행복의 뒤를 좇는다는 것은 아직 마음이 담긴 길을 걷지 않고 있다는 것이다. 당신이 누구이든 어디에 있든 가고 싶은 길을 가라. 그것이 마음이 담긴 길이라면. 마음이 담긴 길을 갈 때 자아가 빛난다.
+    <br><br>
+
+    <a></a>
+    [새는 날아가면서 뒤돌아보지 않는다 45p] 우리는 항상 선택 앞에 놓인다. 한 가지 길의 선택은 가지 않은 많은 길의 포기를 의미한다. 그렇다면 자신이 걷고 있는 길이 좋은 길이라는 것을 어떻게 아는가? 약초를 연구하기 위해 찾아온 UCLA 인류학과 전공자 카를로스 카스타네다에게 야키 족 인디언 돈 후앙은 말한다.<br>
+    그 어떤 길도 수많은 길 중 하나에 불과하다. 그러므로 너는 자신이 걷고 있는 길이 하나의 길에 불과하다는 것을 명심해야 한다. 그리고 그 길을 걷다가 그것을 따를 수 없다고 느끼면 어떤 상황이든 그 길에 머물지 말아야 한다. 마음이 그렇게 하라고 한다면 그 길을 버리는 것은 너 자신에게나 다른 이에게나 전혀 무례한 일이 아니다.<br>
+    스스로에게 이 한 가지를 물어보라. '이 길에 마음이 담겨 있는가?' 마음이 담겨 있다면 그 길은 좋은 길이고, 그렇지 않다면 그 길은 무의미한 길이다. 마음이 담긴 길을 걷는다면 그 길은 즐거운 여행길이 되어 너는 그 길과 하나가 될 것이다. 마음이 담겨있지 않은 길을 걷는다면 그 길은 너로 하여금 삶을 저주하게 만들 것이다. 한 길은 너를 강하게 만들고, 다른 한 길은 너를 약하게 만든다.
+    <br><br>
+
+    <a></a>
+    [새는 날아가면서 뒤돌아보지 않는다 22p] 다른 사람의 아픔에 함께 아파하는 것보다 더 높은 성품은 없다고 붓다는 말했다. 영성은 내가 모든 존재와 연결되어 있음을 깨닫는 일이며, 나 자신 못지않게 다른 존재들의 소중함을 인식하는 일이다. 타인에게 문제가 있으면 나 자신에게도 문제가 발생한다는 것을 아는 일이다. 세상이 아프면 나도 아플 수밖에 없다.
+    <br><br>
+
+    <a></a>
+    [THE CODE OF THE EXTRAORDINARY MIND 211p] Your true greatness comes when you focus not on building a career but on finding your quest.
+    <br><br>
+
+    <a></a>
+    [THE CODE OF THE EXTRAORDINARY MIND 205p] Law 10: Embrace your quest.<br>
+    Extraordinary minds are motivated by a quest or calling――a drive to create some positive change in the world. This drive propels them forward in life and helps them to gain meaning and make a meaningful contribution.
+    <br><br>
+
+    <a></a>
+    [THE CODE OF THE EXTRAORDINARY MIND 196p] I once asked Arianna Huffington the same questions I asked Elon Musk: "What makes you Arianna? If we could distill you an try to extract your essence, what is it that makes you you?"<br>
+    Arianna replied:<br>
+    I would say trust. I have an incredible trust in life. One of my favorite quotes is a little misquote: "Live life as though everything is rigged in our favor." I really profoundly believe that whatever has happened in my life, including the biggest heartbreaks, the biggest disappointments, was exactly what was needed to help me get to the next stage of my own personal evolution and growth. I always had a sense of that, but now I believe that so profoundly. I can literally see the hidden blessing in every bad thing that happened.
+    <br><br>
+
+    <a></a>
+    [THE CODE OF THE EXTRAORDINARY MIND 196p] The path may not be a straight line. You might have old Brules, models of reality, and systems for living (your own and maybe others') to challenge or dismantle first. You may experience dips, stops, starts, and speed bumps. But it's all part of the process. Those bumps are often signposts designed to turn you in the right direction and get you moving toward your calling. This recoding of your life won't always be neat and tidy. Remember:<br>
+    Sometimes you have to destroy a part of your life to let the next big thing enter.<br>
+    I call this the beautiful destruction. Trust is the key that unlocks it.
+    <br><br>
+
+    <a></a>
+    [THE CODE OF THE EXTRAORDINARY MIND 195-196p] You may not know exactly how to get to your end destination or even what that destination is. But there's something mysterious about the human mind: Once you choose a destination, often the right synchronicities, opportunities, and people emerge in your life to get you there. Some people call this luck. I beg to differ. I believe luck is under our control. When you pursue the right end goals while making sure you're happy in the now, happiness unlocks the door for luck to come calling.<br>
+    In fact, it often seems as if you don't find your quest. rather, your quest finds you.
+    <br><br>
+
+    <a></a>
     [THE CODE OF THE EXTRAORDINARY MIND 190p] When you become unfuckwithable, it makes all the smaller problems meaningless. You're no longer bothered about that date who didn't text you back, the rising price of gas, or that naysaying coworker. You have more urgent things to worry about.<br>
     You don't get bogged down by petty problems and by other people's misbehaviors, grudges, and rivalries. You have no time for politicking, finger-pointing, pot-stirring, backstabbing, bullying, tattling, throwing under the bus, and other time sucks that fill the days of bored and unhappy people.<br>
     When you're unfuckwithable, you rise above all of that. Instead, you're thinking of far bigger things――of problems to solve that could change the world and help others move forward. Your goal becomes to tackle these problems.
