--- a/The_war_of_genesis_III.html
+++ b/The_war_of_genesis_III.html
@@ -81,6 +81,33 @@
 
 
 
+
+
+
+
+  <a></a><a></a><a></a><a></a><a></a>
+  YOURTURNS ACTIVATION(051621): 1(+5EXP)<br><br>
+
+  <a></a><a></a><a></a><a></a><a></a>
+  <a></a><a></a><a></a><a></a><a></a>
+  YOURTURNS ACTIVATION(051521): 2(+10EXP)<br><br>
+
+  <a></a><a></a><a></a><a></a><a></a>
+  <a></a><a></a><a></a><a></a><a></a>
+  YOURTURNS ACTIVATION(051121): 2(+10EXP)<br><br>
+
+  <a></a><a></a><a></a><a></a><a></a>
+  <a></a><a></a><a></a><a></a><a></a>
+  YOURTURNS ACTIVATION(050921): 2(+10EXP)<br><br>
+
+  <a></a><a></a><a></a><a></a><a></a>
+  <a></a><a></a><a></a><a></a><a></a>
+  YOURTURNS ACTIVATION(050821): 2(+10EXP)<br><br>
+
+  <a></a><a></a><a></a><a></a><a></a>
+  <a></a><a></a><a></a><a></a><a></a>
+  YOURTURNS ACTIVATION(050521): 2(+10EXP)<br><br>
+
   <a></a><a></a><a></a><a></a><a></a>
   YOURTURNS ACTIVATION(050121): 1(+5EXP)<br><br>
 
